objects/HealthCloudGA__LabelConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FieldReplaceLabel__c</fullName>
        <label>FieldReplaceLabel</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FieldSetName__c</fullName>
        <label>FieldSetName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Sobject__c</fullName>
        <label>Sobject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LabelConfig</label>
    <pluralLabel>LabelConfigs</pluralLabel>
</CustomObject>